--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
 * { text-align: center;
+}
+
+.paraDirectores {
+    color:red;
+    font-weight: bold;
+    text-decoration: underline;
+
+
+}
+
+li{
+
+    list-style: none;
 
 }
